hphp/test/slow/class-ptr/get-class-from-type-lsb.php.expectf
called f

Fatal error: Type constant DAbs::T is abstract in %s/class-ptr/get-class-from-type-lsb.php on line 9
